--- a/GuitarLEDgend/app/src/main/res/layout/activity_test_bluetooth.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_test_bluetooth.xml
@@ -7,132 +7,44 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".bluetooth.BluetoothActivity" >
+    tools:context=".bluetooth.BluetoothActivity"
+    android:orientation="vertical"
+    >
 
-    <LinearLayout
-        android:orientation="vertical"
+    <Button
+        android:background="@drawable/buttons"
+        android:text="Vers Vitesse"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/versvitesse"
+        android:onClick="onClick_Next"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true">
+        android:layout_marginBottom="91dp" />
 
-        <Button
-            android:id="@+id/button_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="onClick_Search"
-            android:text="Search bluetooth device" />
+    <Button
+        android:background="@drawable/buttons"
+        android:text="Connect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonConnect"
+        android:onClick="onClick_Connect"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="62dp" />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-
-            <Button
-                android:text="Connect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/buttonConnect"
-                android:onClick="onClick_Connect"
-                android:layout_weight="1" />
-
-            <Button
-                android:text="Disconnect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/buttonDisconnect"
-                android:onClick="onClick_Disconnect"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
-        <TextView
-            android:text="State : Disconnected"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewState" />
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:id="@+id/editTextCorde"
-                android:layout_weight="1"
-                android:hint="Corde" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:id="@+id/editTextFrette"
-                android:layout_weight="1"
-                android:hint="Frette" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:id="@+id/editTextDoigt"
-                android:layout_weight="1"
-                android:hint="Doigt" />
-
-        </LinearLayout>
-
-        <Button
-            android:text="Play"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonPlay"
-            android:onClick="onClick_Play" />
-
-
-        <Button
-            android:text="Test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonTest"
-            android:onClick="onClick_Test" />
-
-        <Button
-            android:text="Get Battery"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonBattery" />
-
-        <TextView
-            android:text="Battery : ?"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewBattery" />
-
-        <TextView
-            android:id="@+id/tvDevices"
-            android:layout_width="match_parent"
-            android:layout_below="@+id/button_id"
-            android:layout_height="74dp" />
-
-        <Button
-            android:text="Vers Vitesse"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/versvitesse"
-            android:onClick="onClick_Next" />
-
-    </LinearLayout>
+    <Button
+        android:background="@drawable/buttons"
+        android:text="Test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonTest"
+        android:onClick="onClick_Test"
+        android:layout_below="@+id/buttonConnect"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="39dp" />
 
 </RelativeLayout>
