--- a/GuitarLEDgend/app/src/main/res/layout/activity_choose_speed.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_choose_speed.xml
@@ -5,9 +5,13 @@
 
     <EditText
         android:id="@+id/speed_text"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/edit_background"
+        android:textCursorDrawable="@null"
+        android:gravity="center"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         android:hint="@string/vitesse" />
 
 
