--- a/GuitarLEDgend/app/src/main/res/layout/activity_stats_detail.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_stats_detail.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager_stats"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/toolbar" />
+    <com.sembozdemir.viewpagerarrowindicator.library.ViewPagerArrowIndicator
+    android:id="@+id/viewPagerArrowIndicator"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager_stats"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/toolbar"/>
+
+    </com.sembozdemir.viewpagerarrowindicator.library.ViewPagerArrowIndicator>
+
+
+
 
 </LinearLayout>
