--- a/GuitarLEDgend/app/src/main/res/layout/fragment_stats_detail.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_stats_detail.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -14,7 +16,6 @@
         android:id="@+id/graph_stats_fragment" />
 
     <TextView
-        android:background="@drawable/ic_star"
         android:textSize="30sp"
         android:layout_width="200dp"
         android:layout_height="200dp"
