--- a/GuitarLEDgend/app/src/main/res/xml/pref_partition.xml
+++ b/GuitarLEDgend/app/src/main/res/xml/pref_partition.xml
@@ -2,26 +2,17 @@
 
     <!-- A 'parent' preference, which enables/disables child preferences (below)
          when checked/unchecked. -->
-    <SwitchPreference
-        android:defaultValue="true"
-        android:key="notifications_new_message"
-        android:title="@string/pref_title_new_message_notifications" />
+    <ListPreference
+       android:key="partitions"
+       android:title="Partitions"/>
 
-    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
-    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
-    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
-    <RingtonePreference
-        android:defaultValue="content://settings/system/notification_sound"
-        android:dependency="notifications_new_message"
-        android:key="notifications_new_message_ringtone"
-        android:ringtoneType="notification"
-        android:title="@string/pref_title_ringtone" />
+    <Preference android:title="Modifer"
+        android:key="modifier_button"
+        android:summary="This is a cool button"/>
 
-    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
-    <SwitchPreference
-        android:defaultValue="true"
-        android:dependency="notifications_new_message"
-        android:key="notifications_new_message_vibrate"
-        android:title="@string/pref_title_vibrate" />
+    <Preference android:title="Supprimer"
+        android:key="supprimer_button"
+        android:summary="This is a cool button"/>
+
 
 </PreferenceScreen>
