--- a/GuitarLEDgend/app/src/main/res/layout/fragment_stats_detail.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_stats_detail.xml
@@ -13,7 +13,8 @@
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
-        android:id="@+id/graph_stats_fragment" />
+        android:id="@+id/graph_stats_fragment"
+        android:layout_below="@+id/graph_title_statsdetailfragment"/>
 
     <TextView
         android:textSize="30sp"
