--- a/GuitarLEDgend/app/src/main/res/layout/activity_choose_speed.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_choose_speed.xml
@@ -26,4 +26,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="62dp" />
 
+    <TextView
+        android:text="Une vitesse de 10 corespond à la vitesse réelle."
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="89dp"
+        android:textSize="30sp"
+        android:id="@+id/info"
+        android:layout_below="@+id/speed_text"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
