--- a/GuitarLEDgend/app/src/main/res/layout/layout_partitions_choose.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/layout_partitions_choose.xml
@@ -10,9 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/name"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:id="@+id/author" />
 
     <TextView
@@ -20,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/genre"
-        android:layout_below="@id/author"
+        android:layout_below="@id/name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:maxLines="1"
@@ -32,7 +31,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/name"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:layout_alignParentTop="true" />
 
 </RelativeLayout>
