--- a/GuitarLEDgend/app/src/main/res/layout/layout_partitions_choose.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/layout_partitions_choose.xml
@@ -4,27 +4,6 @@
     android:layout_height="match_parent">
 
 
-
-    <TextView
-        android:text="Author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/author" />
-
-    <TextView
-        android:text="Genre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/genre"
-        android:layout_below="@id/name"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:maxLines="1"
-        android:ellipsize="end"/>
-
     <TextView
         android:text="Name"
         android:layout_width="wrap_content"
@@ -32,5 +11,29 @@
         android:id="@+id/name"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true" />
+
+    <TextView
+        android:text="Author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/author"
+        android:layout_marginRight="18dp"
+        android:layout_marginEnd="18dp"
+        android:layout_below="@+id/name"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="Genre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/genre"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
+        android:layout_below="@+id/name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
